router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__tests__unauthenticated_request.snap
---
source: apollo-router/src/plugins/authorization/mod.rs
expression: response
---
{
  "errors": [
    {
      "message": "unauthenticated",
      "extensions": {
        "code": "AUTH_ERROR"
      }
    }
  ]
}
